[package]
name = "runner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
reqwest = { version = "0.11.6", features = ["json"] }
tokio = { version = "1.14.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
itertools = "0.10.1"
rocket_okapi = { version = "0.8.0-rc.1", features = ["swagger", "rapidoc"] }
cached = "0.26.2"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
